<resources>
    <string name="app_name">BagiModal</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="create_account"><![CDATA[Dont have account? Create new one ->]]></string>
    <string name="create">Create</string>
    <string name="wrong_text">Wrong name or password!</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="image_logo">image logo</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign up</string>
    <string name="city">City</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_search_fragment">Hello search fragment</string>
    <string name="hello_profile_fragment">Hello profile fragment</string>
    <string name="create_new_project">Create new Project</string>
    <string name="funded_project">Funded Project</string>
    <string name="donate">Donate</string>
    <string name="description">Description</string>
    <string name="judul">Judul</string>
    <string name="submit_donation">Submit Donation</string>
    <string name="email_exists">Email already exists. Please login.</string>
    <string name="target_donation">Target Donation</string>
    <string name="create_project">Create Project</string>
    <string name="donation_reached">Donation REACHED!!!!</string>
    <string name="category">Category</string>
</resources>