<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:src="@color/black" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="130dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/tv_money"
        android:layout_width="wrap_content"
        android:layout_marginTop="175dp"
        android:layout_marginStart="170dp"
        android:layout_height="wrap_content"
        tools:text="Rp 100000"/>

    <Button
        android:id="@+id/btn_to_create_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:backgroundTint="#2ab639"
        android:text="@string/create_new_project"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_to_funded_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="350dp"
        android:backgroundTint="#2ab639"
        android:text="@string/funded_project"
        android:textAllCaps="false"
        android:textColor="@color/black" />

</FrameLayout>